# samplemod

./: .cyclid.json  .cylid.json  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  api.key  cyclid.json  demofile2.txt  eject.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
docs/: conf.py  index.rst
jupyter_notebooks/: enea-poc.ipynb
jupyter_notebooks/data/: credit_card.csv
lib/: config.yml  main.py  utils.py
sample/: __init__.py  core.py  helpers.py
scripts/: main.py  run_evaluate.py  run_predict.py  run_update.py
tests/: context.py  test_advanced.py  test_basic.py
