[metadata]
name = sample
version = 0.1.0
description = Sample package for Python-Guide.org
long_description = file: README.rst
author = Kenneth Reitz
author_email = me@kennethreitz.com
url = https://github.com/kennethreitz/samplemod
license = file: LICENSE

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    docs
