[metadata]
name = sample
version = 0.1.0
description = Sample package for Python-Guide.org
long_description = file: README.rst
author = Kenneth Reitz
author_email = me@kennethreitz.com
url = https://github.com/kennethreitz/samplemod
license = file: LICENSE

[options]
packages = find:
python_requires = ~=3.6

[options.packages.find]
exclude =
    tests
    docs

[bdist_wheel]
universal = 1

[flake8]
disable-noqa = True
max-line-length = 88
extend-ignore =
   E203,  # whitespace before : is not PEP8 compliant (& conflicts with black)
